FIX: overflow and min-height on body

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -16,7 +16,7 @@ body {
   align-items: center;
 
   max-width: 100vw;
-  min-height: 100vh;
+  max-height: 100vh;
   margin: 0;
 
   /* 'fix' the images to the viewport */
@@ -30,13 +30,13 @@ body {
   background-size: auto, 100% 50%;
   background-color: hsl(230, 100%, 99%);
 
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 /* Page footer */
 footer {
   margin-top: 5vmin;
-  margin-bottom: 2vh;
+  margin-bottom: 2vmin;
 }
 
 .attribution {
